erDiagram
    USERS ||--o{ PROJECTS : owns
    USERS ||--o{ PROJECT_MEMBERS : joins
    PROJECTS ||--o{ PROJECT_MEMBERS : has
    PROJECTS ||--o{ TASKS : contains
    PROJECT_MEMBERS ||--o{ TASKS : can_be_assigned

    USERS {
        bigint user_id PK
        varchar full_name
        varchar email UK
        timestamp created_at
    }

    PROJECTS {
        bigint project_id PK
        varchar project_name
        bigint owner_user_id FK
        timestamp created_at
    }

    PROJECT_MEMBERS {
        bigint project_id PK,FK
        bigint user_id PK,FK
        varchar member_role
        timestamp joined_at
    }

    TASKS {
        bigint task_id PK
        bigint project_id FK
        bigint assigned_user_id FK
        varchar title
        text description
        varchar status
        date due_date
        timestamp created_at
        timestamp updated_at
    }
